Created testing scripts to better parallelize jobs on Scinet and reorganized directories in repo. The scripts still dont work as the C implementation is limited to L <= 256, but i need bigger L for ANS-256

--- a/tANS_apack_activations.ipynb
+++ b/tANS_apack_activations.ipynb
@@ -40,16 +40,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vmin</th>\n",
+       "      <th>OL</th>\n",
+       "      <th>abits</th>\n",
+       "      <th>obits</th>\n",
+       "      <th>vcnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>136178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>273098</td>\n",
+       "      <td>305040</td>\n",
+       "      <td>61008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32</td>\n",
+       "      <td>4</td>\n",
+       "      <td>273917</td>\n",
+       "      <td>246472</td>\n",
+       "      <td>61618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>48</td>\n",
+       "      <td>4</td>\n",
+       "      <td>350503</td>\n",
+       "      <td>356392</td>\n",
+       "      <td>89098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64</td>\n",
+       "      <td>4</td>\n",
+       "      <td>415726</td>\n",
+       "      <td>471844</td>\n",
+       "      <td>117961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>80</td>\n",
+       "      <td>4</td>\n",
+       "      <td>461519</td>\n",
+       "      <td>566536</td>\n",
+       "      <td>141634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>96</td>\n",
+       "      <td>4</td>\n",
+       "      <td>489597</td>\n",
+       "      <td>630684</td>\n",
+       "      <td>157671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>112</td>\n",
+       "      <td>4</td>\n",
+       "      <td>492689</td>\n",
+       "      <td>639620</td>\n",
+       "      <td>159905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>128</td>\n",
+       "      <td>4</td>\n",
+       "      <td>472310</td>\n",
+       "      <td>591748</td>\n",
+       "      <td>147937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>144</td>\n",
+       "      <td>4</td>\n",
+       "      <td>433024</td>\n",
+       "      <td>504964</td>\n",
+       "      <td>126241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>160</td>\n",
+       "      <td>4</td>\n",
+       "      <td>371666</td>\n",
+       "      <td>392204</td>\n",
+       "      <td>98051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>176</td>\n",
+       "      <td>4</td>\n",
+       "      <td>298272</td>\n",
+       "      <td>279276</td>\n",
+       "      <td>69819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>192</td>\n",
+       "      <td>4</td>\n",
+       "      <td>222365</td>\n",
+       "      <td>181060</td>\n",
+       "      <td>45265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>208</td>\n",
+       "      <td>4</td>\n",
+       "      <td>153881</td>\n",
+       "      <td>108404</td>\n",
+       "      <td>27101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>224</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97094</td>\n",
+       "      <td>59380</td>\n",
+       "      <td>14845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>240</td>\n",
+       "      <td>4</td>\n",
+       "      <td>88417</td>\n",
+       "      <td>52960</td>\n",
+       "      <td>13240</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    vmin  OL   abits   obits    vcnt\n",
+       "0      0   0  136178       0   23358\n",
+       "1      1   5  273098  305040   61008\n",
+       "2     32   4  273917  246472   61618\n",
+       "3     48   4  350503  356392   89098\n",
+       "4     64   4  415726  471844  117961\n",
+       "5     80   4  461519  566536  141634\n",
+       "6     96   4  489597  630684  157671\n",
+       "7    112   4  492689  639620  159905\n",
+       "8    128   4  472310  591748  147937\n",
+       "9    144   4  433024  504964  126241\n",
+       "10   160   4  371666  392204   98051\n",
+       "11   176   4  298272  279276   69819\n",
+       "12   192   4  222365  181060   45265\n",
+       "13   208   4  153881  108404   27101\n",
+       "14   224   4   97094   59380   14845\n",
+       "15   240   4   88417   52960   13240"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s_tabs = [ pd.read_csv(f\"trace/mobilenet_v2/input_{i}_flat.apack\", sep = \" \", header = None) for i in range(range_[0],range_[1])]\n",
     "\n",
     "for s_tab in s_tabs:            \n",
     "    s_tab.columns = [\"vmin\",\"OL\",\"abits\",\"obits\",\"vcnt\"]\n",
     "\n",
-    "# s_tabs[0].vmin, bisect.bisect_right(s_tabs[0].vmin,47) - 1"
+    "# s_tabs[0].vmin, bisect.bisect_right(s_tabs[0].vmin,47) - 1\n",
+    "s_tabs[0]"
    ]
   },
   {
@@ -579,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
